gen/SyntaxAnalysisParser.java
// Generated from C:/Users/m-s-t/Documents/GitHub/Gio\SyntaxAnalysis.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SyntaxAnalysisParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, BOOL=26, ID=27, DIGITS=28, DIGIT=29, LETTER=30, LETTERORDIGIT=31, 
		MUL=32, DIV=33, ADD=34, SUB=35, MOD=36, GE=37, LE=38, GT=39, LT=40, EQUALS=41, 
		NOTEQUALS=42, AND=43, OR=44, QMARK=45, COLON=46, WS=47, LINE_COMMENT=48;
	public static final int
		RULE_prog = 0, RULE_func = 1, RULE_eventHand = 2, RULE_block = 3, RULE_stmt = 4, 
		RULE_incr_Stmt = 5, RULE_decr_Stmt = 6, RULE_return_Stmt = 7, RULE_expression = 8, 
		RULE_primary = 9, RULE_func_Call = 10, RULE_fparam = 11, RULE_param = 12, 
		RULE_ftype = 13, RULE_type = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "func", "eventHand", "block", "stmt", "incr_Stmt", "decr_Stmt", 
			"return_Stmt", "expression", "primary", "func_Call", "fparam", "param", 
			"ftype", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'('", "')'", "'endFunction'", "'when'", "'endWhen'", 
			"'if'", "'do'", "'else if'", "'else do'", "'endIf'", "'repeat'", "'endRepeat'", 
			"'repeatIf'", "'endRepeatIf'", "'until'", "'.'", "'='", "'++'", "'--'", 
			"'return'", "','", "'void'", "'num'", "'bool'", null, null, null, null, 
			null, null, "'*'", "'/'", "'+'", "'-'", "'%'", "'>='", "'<='", "'>'", 
			"'<'", "'=='", "'!='", "'&&'", "'||'", "'?'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BOOL", "ID", "DIGITS", "DIGIT", "LETTER", "LETTERORDIGIT", 
			"MUL", "DIV", "ADD", "SUB", "MOD", "GE", "LE", "GT", "LT", "EQUALS", 
			"NOTEQUALS", "AND", "OR", "QMARK", "COLON", "WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SyntaxAnalysis.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SyntaxAnalysisParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SyntaxAnalysisParser.EOF, 0); }
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<EventHandContext> eventHand() {
			return getRuleContexts(EventHandContext.class);
		}
		public EventHandContext eventHand(int i) {
			return getRuleContext(EventHandContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__4) {
				{
				setState(32);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(30);
					func();
					}
					break;
				case T__4:
					{
					setState(31);
					eventHand();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
	 
		public FuncContext() { }
		public void copyFrom(FuncContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionContext extends FuncContext {
		public FtypeContext ftype() {
			return getRuleContext(FtypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public FparamContext fparam() {
			return getRuleContext(FparamContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionContext(FuncContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func);
		try {
			_localctx = new FunctionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__0);
			setState(40);
			ftype();
			setState(41);
			match(ID);
			setState(42);
			match(T__1);
			setState(43);
			fparam();
			setState(44);
			match(T__2);
			setState(45);
			block();
			setState(46);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventHandContext extends ParserRuleContext {
		public EventHandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventHand; }
	 
		public EventHandContext() { }
		public void copyFrom(EventHandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhenContext extends EventHandContext {
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public FparamContext fparam() {
			return getRuleContext(FparamContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhenContext(EventHandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitWhen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventHandContext eventHand() throws RecognitionException {
		EventHandContext _localctx = new EventHandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eventHand);
		try {
			_localctx = new WhenContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__4);
			setState(49);
			match(ID);
			setState(50);
			match(T__1);
			setState(51);
			fparam();
			setState(52);
			match(T__2);
			setState(53);
			block();
			setState(54);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlkContext extends BlockContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlkContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitBlk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			_localctx = new BlkContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__11) | (1L << T__13) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__23) | (1L << T__24) | (1L << ID))) != 0)) {
				{
				{
				setState(56);
				stmt();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RetContext extends StmtContext {
		public Return_StmtContext return_Stmt() {
			return getRuleContext(Return_StmtContext.class,0);
		}
		public RetContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Rep_ifContext extends StmtContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Rep_ifContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitRep_if(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IncrContext extends StmtContext {
		public Incr_StmtContext incr_Stmt() {
			return getRuleContext(Incr_StmtContext.class,0);
		}
		public IncrContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitIncr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Rep_untilContext extends StmtContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Rep_untilContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitRep_until(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Func_stmtContext extends StmtContext {
		public Func_CallContext func_Call() {
			return getRuleContext(Func_CallContext.class,0);
		}
		public Func_stmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitFunc_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepContext extends StmtContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DIGITS() { return getToken(SyntaxAnalysisParser.DIGITS, 0); }
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public RepContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitRep(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends StmtContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DecrContext extends StmtContext {
		public Decr_StmtContext decr_Stmt() {
			return getRuleContext(Decr_StmtContext.class,0);
		}
		public DecrContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitDecr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignContext extends StmtContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Incr_StmtContext incr_Stmt() {
			return getRuleContext(Incr_StmtContext.class,0);
		}
		public Decr_StmtContext decr_Stmt() {
			return getRuleContext(Decr_StmtContext.class,0);
		}
		public AssignContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(T__6);
				setState(63);
				match(T__1);
				setState(64);
				expression(0);
				setState(65);
				match(T__2);
				setState(66);
				match(T__7);
				setState(67);
				block();
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(68);
					match(T__8);
					setState(69);
					match(T__1);
					setState(70);
					expression(0);
					setState(71);
					match(T__2);
					setState(72);
					match(T__7);
					setState(73);
					block();
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(80);
					match(T__9);
					setState(81);
					block();
					}
				}

				setState(84);
				match(T__10);
				}
				break;
			case 2:
				_localctx = new RepContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(T__11);
				setState(87);
				match(T__1);
				setState(88);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==DIGITS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(89);
				match(T__2);
				setState(90);
				block();
				setState(91);
				match(T__12);
				}
				break;
			case 3:
				_localctx = new Rep_ifContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(T__13);
				setState(94);
				match(T__1);
				setState(95);
				expression(0);
				setState(96);
				match(T__2);
				setState(97);
				block();
				setState(98);
				match(T__14);
				}
				break;
			case 4:
				_localctx = new Rep_untilContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(T__11);
				setState(101);
				block();
				setState(102);
				match(T__15);
				setState(103);
				match(T__1);
				setState(104);
				expression(0);
				setState(105);
				match(T__2);
				}
				break;
			case 5:
				_localctx = new Func_stmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				func_Call();
				setState(108);
				match(T__16);
				}
				break;
			case 6:
				_localctx = new AssignContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(110);
				type();
				setState(111);
				match(ID);
				setState(112);
				match(T__17);
				setState(116);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(113);
					expression(0);
					}
					break;
				case 2:
					{
					setState(114);
					incr_Stmt();
					}
					break;
				case 3:
					{
					setState(115);
					decr_Stmt();
					}
					break;
				}
				setState(118);
				match(T__16);
				}
				break;
			case 7:
				_localctx = new IncrContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(120);
				incr_Stmt();
				setState(121);
				match(T__16);
				}
				break;
			case 8:
				_localctx = new DecrContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(123);
				decr_Stmt();
				setState(124);
				match(T__16);
				}
				break;
			case 9:
				_localctx = new RetContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(126);
				return_Stmt();
				setState(127);
				match(T__16);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Incr_StmtContext extends ParserRuleContext {
		public Incr_StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_incr_Stmt; }
	 
		public Incr_StmtContext() { }
		public void copyFrom(Incr_StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Post_incrContext extends Incr_StmtContext {
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public Post_incrContext(Incr_StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitPost_incr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Pre_incrContext extends Incr_StmtContext {
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public Pre_incrContext(Incr_StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitPre_incr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Incr_StmtContext incr_Stmt() throws RecognitionException {
		Incr_StmtContext _localctx = new Incr_StmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_incr_Stmt);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__18:
				_localctx = new Pre_incrContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(T__18);
				setState(132);
				match(ID);
				}
				break;
			case ID:
				_localctx = new Post_incrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(ID);
				setState(134);
				match(T__18);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decr_StmtContext extends ParserRuleContext {
		public Decr_StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decr_Stmt; }
	 
		public Decr_StmtContext() { }
		public void copyFrom(Decr_StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Pre_decrContext extends Decr_StmtContext {
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public Pre_decrContext(Decr_StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitPre_decr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Post_decrContext extends Decr_StmtContext {
		public TerminalNode ID() { return getToken(SyntaxAnalysisParser.ID, 0); }
		public Post_decrContext(Decr_StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitPost_decr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decr_StmtContext decr_Stmt() throws RecognitionException {
		Decr_StmtContext _localctx = new Decr_StmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decr_Stmt);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__19:
				_localctx = new Pre_decrContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(T__19);
				setState(138);
				match(ID);
				}
				break;
			case ID:
				_localctx = new Post_decrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(ID);
				setState(140);
				match(T__19);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_StmtContext extends ParserRuleContext {
		public Return_StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_Stmt; }
	 
		public Return_StmtContext() { }
		public void copyFrom(Return_StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnStmtContext extends Return_StmtContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnStmtContext(Return_StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxAnalysisVisitor ) return ((SyntaxAnalysisVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_StmtContext return_Stmt() throws RecognitionException {
		Return_StmtContext _localctx = new Return_StmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_return_Stmt);
		try {
			_localctx = new ReturnStmtContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__20);
			setState(144);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
